--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,83 @@
 html {
     scroll-behavior: smooth !important;
 }
+
 html {
     font-size: 62.5%;
 }
 body {
     font-size: 1.6rem;
+    font-family: "Poppins", sans-serif;
+}
+
+/* COmmon */
+.main-content {
+    width: 117rem;
+    max-width: calc(100% - 24px);
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn {
+    padding: 0 16px;
+    display: inline-block;
+    color: #fff;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    border-radius: 2.45rem;
+    background: #171100;
+    line-height: 5rem;
+    min-width: 11.8rem;
+}
+/* Header */
+.header {
+    background: #fffcf4;
+}
+.header.fixed {
+    position: sticky;
+    top: -2.8rem;
+}
+.header .body {
+    align-items: center;
+    display: flex;
+    padding: 3.6rem 0 0.8rem;
+}
+
+.body ul {
+    display: flex;
+}
+.body .nav {
+    margin-left: auto;
+}
+.nav a {
+    position: relative;
+    color: #5f5b53;
+    font-size: 1.6rem;
+    padding: 0.8rem 2.1rem;
+}
+
+.nav a:hover,
+.nav li.active a {
+    text-shadow: 1px 0 0 currentColor;
+    color: #171100;
+}
+
+.nav li.active a::after {
+    content: "";
+    border-radius: 0.1rem;
+    background: #171100;
+    width: 1.2rem;
+    height: 0.2rem;
+    display: inline-block;
+    position: absolute;
+    left: 2.1rem;
+    bottom: 0.6rem;
+}
+.header .signup-btn {
+    min-width: 14.4rem;
+    margin-left: 4.9rem;
 }
