--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,9 @@
     box-sizing: border-box;
 }
 
-/* :root {
-} */
+:root {
+    --primary-color: #ffb900;
+}
 
 *,
 html {
@@ -43,6 +44,19 @@ a {
 }
 .btn:hover {
     opacity: 0.9;
+}
+
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 1);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.line-clamp.line-2 {
+    --line-clamp: 2;
+}
+.word-break {
+    word-break: break-all;
 }
 /* Header */
 .header {
@@ -97,8 +111,8 @@ a {
 /* Hero */
 .hero {
     background-color: #fffcf4;
-
-    padding-top: 6.4rem;
+    padding-top: 7rem;
+    height: calc(100vh - 9.4rem);
 }
 .hero .body {
     display: flex;
@@ -116,6 +130,7 @@ a {
     height: 68.5rem;
     object-fit: cover;
     object-position: center;
+    vertical-align: bottom;
 }
 .media-block .card {
     width: 27rem;
@@ -131,6 +146,7 @@ a {
 .media-block .card .item {
     display: flex;
     gap: 1.6rem;
+    align-items: center;
 }
 .media-block .card .item + .item {
     margin-top: 2.2rem;
@@ -196,7 +212,7 @@ a {
 }
 .cta-group .hero-cta {
     border-radius: 3.2rem;
-    background: #ffb900;
+    background: var(--primary-color);
     min-width: 18rem;
     line-height: 6.4rem;
     color: #fff;
@@ -210,7 +226,7 @@ a {
 .cta-group .img {
     height: 12px;
     width: 12px;
-    background-color: orange;
+    background-color: var(--primary-color);
     clip-path: polygon(0 0, 0% 100%, 100% 50%);
 }
 
@@ -239,6 +255,9 @@ a {
     font-weight: 700;
     padding-right: 1rem;
 }
+.stats:last-child {
+    margin-top: 1rem;
+}
 .stats strong:last-child {
     padding-left: 2.8rem;
 }
@@ -248,4 +267,190 @@ a {
     font-weight: 600;
     line-height: 3rem;
     margin-left: 1.4rem;
+}
+
+/* Popular */
+
+.popular {
+    margin: 20rem 0;
+}
+.popular .popular-top {
+    display: flex;
+    align-items: center;
+}
+.popular .controls {
+    margin-left: auto;
+    display: flex;
+    gap: 1.8rem;
+}
+.popular .control-btn {
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    border-radius: 50%;
+    border: 1px solid var(--primary-color);
+    cursor: pointer;
+    color: var(--primary-color);
+    transition: 0.25s ease;
+}
+.popular .control-btn:hover {
+    color: #fff;
+    background: var(--primary-color);
+}
+.popular .heading {
+    color: #171100;
+    font-family: Sen;
+    font-size: 3.8rem;
+    font-weight: 700;
+    line-height: 4.8rem; /* 126.316% */
+    letter-spacing: -0.076rem;
+}
+.popular .desc {
+    color: #5f5b53;
+    width: 45.8rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 3rem;
+    padding-top: 1.6rem;
+}
+/* popular bottom */
+.popular .course-list {
+    margin-top: 5.5rem;
+    display: flex;
+    gap: 3rem;
+}
+.popular .course-list .course-item {
+    flex: 1;
+    border-radius: 1.2rem;
+    background: #fff;
+    border: 1px solid #e2dfda;
+    transition: 0.25s ease;
+}
+
+.popular .course-item:hover {
+    border-color: transparent;
+    box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+.popular .course-item .thumb {
+    margin: -1px;
+    width: calc(100% + 2px);
+    height: 27.8rem;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 1.2rem 1.2rem 0rem 0rem;
+}
+
+.course-item .info {
+    padding: 1.6rem 2.2rem 2.2rem;
+}
+.popular .course-item .head {
+    display: flex;
+    align-items: center;
+}
+.course-item .head .rating {
+    display: flex;
+    gap: 0.6rem;
+    align-items: center;
+    margin-left: auto;
+}
+.course-item .head .rating .value {
+    margin-left: 6px;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #fea31b;
+}
+.course-item .title a,
+.bottom .title {
+    padding-right: 6px;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.67;
+    color: #171100;
+}
+.course-item .desc {
+    width: 32.6rem;
+    color: #5f5b53;
+    font-size: 1.4rem;
+    font-weight: 400;
+    padding-top: 0.6rem;
+    line-height: 2.6rem;
+}
+
+.popular .bottom {
+    margin-top: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.popular-btn {
+    color: #fff;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 5rem;
+    transition: 0.25s ease;
+}
+.popular-btn:hover {
+    background-color: var(--primary-color);
+}
+
+/* Feedback */
+.feedback {
+    background: #2e2100;
+    padding: 9.6rem 0;
+}
+.feedback .feedback-item {
+    display: flex;
+}
+.feedback-item .info .avatar {
+    width: 7.2rem;
+    height: 7.2rem;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+}
+.feedback-item .info .title {
+    margin-top: 1.8rem;
+    color: #f7f7f7;
+    font-family: Sen;
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.42;
+}
+.feedback-item .info .desc {
+    margin-top: 0.4rem;
+    color: #bfbcb2;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.6rem; /* 185.714% */
+}
+.feedback-item .info .dots {
+    display: flex;
+    margin-top: 2.8rem;
+    gap: 0.6rem;
+}
+.feedback-item .info .dot {
+    width: 0.6rem;
+    height: 0.6rem;
+    border-radius: 50%;
+    background-color: #634700;
+    cursor: pointer;
+}
+.feedback-item .info .dot.active {
+    background-color: #ffb900;
+    cursor: default;
+}
+.feedback-item .content {
+    width: 66%;
+    margin-left: auto;
+}
+.feedback-item blockquote {
+    margin-left: 3rem;
+    color: #fff;
+    font-size: 2.6rem;
+    font-style: italic;
+    line-height: 1.54; /* 153.846% */
 }
